# cartography

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  contact.html  cubic.yaml  dev.Dockerfile  docker-compose.yml  index.html  info.html  install.html  llms.txt  module-list.html  objects.inv  ops.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: contact.doctree  environment.pickle  index.doctree  info.doctree  install.doctree  module-list.doctree  ops.doctree
.doctrees/agents/: analysis-jobs.doctree  enrich-ontology.doctree
.doctrees/dev/: developer-guide.doctree  index.doctree  matchlinks.doctree  writing-analysis-jobs.doctree  writing-intel-modules.doctree
.doctrees/modules/: index.doctree
.doctrees/references/: aws_client.doctree  driftdetect.doctree  model.doctree  orm.doctree  rules.doctree  sync.doctree
.doctrees/usage/: cli.doctree  drift-detect.doctree  index.doctree  rules.doctree  samplequeries.doctree  schema.doctree  tutorial.doctree
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md  issue-report.md
.github/workflows/: ossf-scorecard.yml  publish-to-ghcr-and-pypi.yml  sphinx.yml  stale.yml  test_suite.yml
_sources/: index.md  install.md
_sources/agents/: analysis-jobs.md  enrich-ontology.md
_sources/dev/: developer-guide.md  matchlinks.md  writing-intel-modules.md.txt
_sources/usage/: drift-detect.md  index.md.txt  rules.md  samplequeries.md  samplequeries.md.txt  schema.md  schema.md.txt
agents/: add-node-type.html  add-relationship.html  analysis-jobs.html  create-module.html  create-rule.html  enrich-ontology.html  index.html  refactor-legacy.html  troubleshooting.html
cartography/: __init__.py  cli.py  config.py  helpers.py  sync.py  util.py  version.py
cartography/data/: azure_permission_relationships.yaml  gcp_permission_relationships.yaml  indexes.cypher  permission_relationships.yaml
cartography/driftdetect/: cli.py  get_states.py
cartography/graph/: analysis.py  analysisbuilder.py  cleanupbuilder.py  job.py  querybuilder.py  statement.py
cartography/intel/: container_arch.py  container_image.py  create_indexes.py  dns.py  supply_chain.py
cartography/rules/: README.md  cli.py  formatters.py  runners.py
demo/: __main__.py
demo/seeds/: azure.py  github.py  googleworkspace.py  keycloak.py  semgrep.py  slack.py
dev/: developer-guide.html  index.html  matchlinks.html  writing-analysis-jobs.html  writing-intel-modules.html
docs/: README.md  conf.py
docs/agents/: add-node-type.md  create-module.md  create-rule.md  enrich-ontology.md  troubleshooting.md
docs/root/: index.md  install.md  module-list.md  ops.md  robots.txt
modules/: index.html
modules/_cartography-metadata/: schema.html
modules/aibom/: config.html  index.html  schema.html
modules/airbyte/: config.html  index.html  schema.html
modules/anthropic/: config.html  index.html  schema.html
modules/aws/: config.html  index.html  permissions-mapping.html  schema.html
modules/azure/: config.html  index.html  permission-mapping.html  schema.html
modules/bigfix/: config.html  index.html  schema.html
modules/circleci/: config.html  index.html  schema.html
modules/cloudflare/: config.html  index.html  schema.html
modules/crowdstrike/: config.html  index.html  schema.html
modules/cve/: config.html  index.html  schema.html
modules/cve_metadata/: config.html  index.html  schema.html
modules/databricks/: config.html  index.html  schema.html
modules/digitalocean/: config.html  index.html  schema.html
modules/docker_scout/: config.html  index.html  schema.html
modules/duo/: config.html  index.html  schema.html
modules/entra/: config.html  examples.html  index.html  schema.html
modules/gcp/: config.html  index.html  permission-mapping.html  schema.html
modules/github/: config.html  index.html  schema.html
modules/gitlab/: config.html  index.html  schema.html
modules/googleworkspace/: config.html  index.html  schema.html
modules/gsuite/: config.html  index.html  schema.html
modules/jamf/: index.html  schema.html
modules/jumpcloud/: config.html  index.html  schema.html
modules/kandji/: config.html  index.html  schema.html
modules/keycloak/: analysis.html  config.html  index.html  schema.html
modules/kubernetes/: config.html  index.html  schema.html
modules/lastpass/: config.html  index.html  schema.html
modules/microsoft/: config.html  entra-schema.html  examples.html  index.html  schema.html
modules/oci/: config.html  index.html  schema.html
modules/okta/: config.html  index.html  schema.html
modules/ontology/: config.html  index.html  schema.html
modules/openai/: config.html  index.html  schema.html
modules/pagerduty/: config.html  index.html  schema.html
modules/salesforce/: config.html  index.html  schema.html
modules/scaleway/: config.html  index.html  schema.html
modules/semgrep/: config.html  index.html  schema.html
modules/sentinelone/: config.html  index.html  schema.html
modules/sentry/: config.html  index.html  schema.html
modules/slack/: config.html  index.html  schema.html
modules/snipeit/: config.html  index.html  schema.html
modules/socketdev/: config.html  index.html  schema.html
modules/spacelift/: config.html  index.html  schema.html
modules/subimage/: config.html  index.html  schema.html
modules/syft/: config.html  index.html  schema.html
modules/tailscale/: config.html  index.html  schema.html
modules/tenable/: schema.html
modules/trivy/: config.html  index.html  schema.html
modules/ubuntu/: schema.html
modules/vercel/: config.html  index.html  schema.html
modules/workday/: config.html  (+3 more)
references/: aws_client.html  driftdetect.html  index.html  model.html  orm.html  rules.html  sync.html
tests/: AGENTS.md  utils.py
usage/: applications.html  aws-privilege-escalation-queries.html  cli.html  drift-detect.html  index.html  rules.html  samplequeries.html  schema.html  tutorial.html
(+2852 files in other folders)
